--- a/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Content/Site.css
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Content/Site.css
@@ -1,37 +1,6 @@
-﻿/*body {
-    font-size: .85em;
-    font-family: "Segoe UI", Verdana, Helvetica, Sans-Serif;
-    color:#a0522d;
-    background-color:#f5deb3;
-}
-
-header, footer, nav, section {
-    display: block;
-}*/
-
-/* Styles for basic forms
------------------------------------------------------------*/
-fieldset {
-    /*border: 1px solid #8b4513;*/
-    padding: 0 1.4em 1.4em 1.4em;
-    margin: 0 0 1.5em 0;
-}
-
-.all-users {
-    border: 1px solid grey;
-}
-
-    .all-users .h2 {
-        padding-left: 1.4em;
-    }
-
-.user {
-    padding: 0 1.4em 1.4em 1.4em;
-}
-
-.top {
-    border: 1px solid grey;
-    background-color: #c6c6c6;
+﻿body {
+    font-family: Cambria, Georgia, "Times New Roman";
+    margin: 0;
 }
 
 legend {
