--- a/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Content/Site.css
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Content/Site.css
@@ -1,7 +1,143 @@
-﻿body {
-    font-family: Cambria, Georgia, "Times New Roman";
+﻿html {
     margin: 0;
+    font-family: Cambria, Georgia, "Times New Roman";
 }
+
+#lists {
+	transition: width 100ms ease;
+	background: #f7f7f7;
+	height: 100vh;
+}
+
+#search-toolbar {
+	background: #5b7a59;
+	height: 45px;
+	margin: 0 -15px; 
+}
+
+#user-toolbar {
+	height: 45px;
+	align-items: center;
+    padding-top: 2px;
+    padding-bottom: 4px;
+}
+
+#lists-scroll {
+	overflow-y: auto;
+    overflow-x: hidden;
+}
+
+#lists-sidebar {
+	position: fixed;
+	bottom: 5px;
+	height: 45px;  
+/*	width: 25%;*/
+	border-top: 1px solid #DCDCDC;
+	margin-left: -15px;
+}
+
+#list-toolbar {
+	background: #698F67;
+	width: auto;
+	height: 45px;
+	margin: -20px -15px; 
+}
+
+.title {
+	color: #FFF;
+	display: block;
+	padding: 3px 4px;
+	margin-left: 10px;
+}
+
+#item-info {
+	display: block;
+}
+
+a:hover{
+	text-decoration: none;
+}
+
+a img {
+	padding: 10px;
+}
+
+#search {
+	background: #5b7a59;
+	border: none;
+	color: #FFF;
+	width: 75%;
+	margin-left: -5px;
+}
+
+a span {
+	font-size: 1.1em;
+	color: #000;
+	text-decoration: none;
+}
+
+/*#main {
+	background-image: url(main.jpg);
+}*/ 
+
+#add-task {
+	padding: 2px;
+	height: 45px;
+	position: relative;
+	margin-top: 10px;
+	background: #79B376;
+	border-radius: 5px;
+}
+
+#new-task {
+	background: #79B376;
+	border: #79B376;
+	color: #FFF;
+	font-size: 1.1em;
+	width: 78%;
+	height: 25px;
+	padding: 10px;
+}
+
+#calendar, #plus {
+	margin-top: -10px;
+	padding-left: 5px;
+}
+
+.star {
+	font-size: 2.0em;
+	color: #FFF;
+	padding: 10px;
+	text-align: right;
+}
+
+#show-done {
+	margin-top: 30px;
+	background: #79B376; 
+	color: #FFF;
+	border-radius: 3px;
+	padding: 5px;
+	width: auto;
+}
+
+.done-true {
+    text-decoration: line-through;
+    color: grey;
+}
+
+.item {
+	border-radius: 3px;
+	background: #538F7D;
+	list-style-type: none;
+	margin-left: -8%;
+	padding-left: 5px;
+}
+
+#item-info {
+	display: none;
+}
+
+
 
 legend {
     font-size: 1.2em;
