--- a/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Views/Home/Index.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
-﻿
+﻿@model IEnumerable<Wunderlist.ViewModels.UserViewModel>
+
 <h2>Index</h2>
-@*@foreach (var item in Model)
+@foreach (var item in Model)
 {
     <div class="modal-title">
-        @Html.DisplayFor(modelItem => item.Email)
+        @item.Name
     </div>
-}*@
+}
