--- a/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Views/Shared/_Layout.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Views/Shared/_Layout.cshtml
@@ -11,19 +11,62 @@
     @Scripts.Render("~/bundles/jqueryval")
 </head>
 <body>
-    <div class="container top">
-        <div class="col-md-3">
-            @Html.ActionLink("Index", "Index", "Home")
+    <aside id="lists" class="col-sm-3">
+        <div id="search-toolbar">
+            <a href="#">
+                <img src="~/Content/menu.png" alt="Toggle Sidebar">
+            </a>
+            <input type="text" placeholder="Поиск..." ng-model="search.text" id="search" />
+            <img src="~/Content/magnify.png" alt="Search">
+        </div>
+        <div id="user-toolbar">Profile</div>
+        <div id="lists-scroll">Tsaks</div>
+        <div id="lists-sidebar">
+            <a href="#">
+                <img src="~/Content/plus.png" alt="Search">
+                <span>Создать список</span>
+            </a>
+        </div>
+    </aside>
+
+    <main class="col-sm-5" id="main">
+
+        <div id="list-toolbar">
+            <h2 class="title">text</h2>
+        </div>
+        <div id="action-bar"></div>
+
+        <br>
+
+        <div id="tasks-scroll">
+            <div id="add-task">
+                <form ng-submit="addTodo()">
+                    <img src="~/Content/plus-white.png" id="plus">
+                    <input type="text" ng-model="todoText" placeholder="Добавить задачу..." id="new-task">
+                    <img src="~/Content/calendar.png" alt="Calendar" id="calendar">
+                    <span class="star">&#9734</span>
+                </form>
+            </div>
         </div>
 
-        <div class="col-md-9">
-            @Html.Partial("_Login", new Wunderlist.ViewModels.UserLoginModel())
-        </div>
-    </div>
-    <div class="container">
-        @RenderBody()
+        <br>
 
-    </div>
+        <ul class="unstyled">
+            <li ng-repeat="todo in todos" class="item">
+                <input type="checkbox" ng-model="todo.done">
+                <span class="done-{{todo.done}}">{{todo.text}}</span>
+                <span class="star">&#9734</span>
+            </li>
+        </ul>
+
+        <br>
+
+        <a href="#" id="show-done">ПОКАЗАТЬ ЗАВЕРШЕННЫЕ ЗАДАЧИ</a>
+    </main>
+
+    <aside class="col-sm-4" id="item-info">wesdrftghjk</aside>
+
+    @RenderBody()
 
     @Scripts.Render("~/bundles/jquery")
     <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
