--- a/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Content/Site.css
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Content/Site.css
@@ -1,5 +1,6 @@
 ﻿html {
     margin: 0;
+    padding: 0;
     font-family: Cambria, Georgia, "Times New Roman";
 }
 
@@ -58,7 +59,7 @@ a:hover{
 	text-decoration: none;
 }
 
-a img {
+a img, img {
 	padding: 10px;
 }
 
@@ -137,11 +138,50 @@ a span {
 	display: none;
 }
 
+#icon {
+    width: 80px;
+    height: 80px;
+    display:block; 
+    margin: 30px auto;
+}
 
+.form-logon input {
+    height: 50px;
+    width: 300px;
+    border: none;
+}
+
+.form-logon {
+    border: solid 1px #DCDCDC;
+    border-radius: 5px;
+    width: 350px;
+    display:block; 
+    margin: 0 auto;
+}
 
 legend {
     font-size: 1.2em;
     font-weight: bold;
+}
+
+/*placeholder {
+    font-size: 16px;
+}*/
+
+.btn {
+    display: block;
+    margin: 0 auto;
+    border-radius: 5px;
+    background: #2b88d9;
+    color: #FFF;
+    font-size: 16px;
+    font-weight: bold;
+    border: 0 none;
+}
+
+#link {
+    text-align: center;
+    padding: 15px;
 }
 
 textarea {
