--- a/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Views/Home/Index.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Views/Home/Index.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IEnumerable<Wunderlist.ViewModels.UserViewModel>
 
+@{ 
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
 <h2>Index</h2>
 @foreach (var item in Model)
 {
