--- a/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Views/Shared/_Layout.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Views/Shared/_Layout.cshtml
@@ -71,6 +71,6 @@
     @Scripts.Render("~/bundles/jquery")
     <script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>
 
-    @RenderSection("scripts", required: false)
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
