--- a/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Views/Account/Register.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Views/Account/Register.cshtml
@@ -1,54 +1,52 @@
 ﻿@model Wunderlist.ViewModels.UserRegisterModel
 
 @{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Регистрация";
 }
 
-<h2>Register</h2>
+@section Content {
+    <h4 class="signup">Получите Wunderlist бесплатно</h4>
 
-@using (Html.BeginForm("Register","Account")) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-register" }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <fieldset>
-        <legend>UserRegisterModel</legend>
-        <div>@ViewBag.Error</div>
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
-        </div>
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Name)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Name)
-            @Html.ValidationMessageFor(model => model.Name)
+        <div class="field">
+            <br />
+            <img src="~/Content/user.png" alt="user" />
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { placeholder = "Имя" } })
+            @Html.ValidationMessageFor(model => model.Name, null, new { @class = "text-danger" })
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Password)
-        </div>
-        <div class="editor-field">
-            @Html.PasswordFor(model => model.Password)
-            @Html.ValidationMessageFor(model => model.Password)
+        <hr />
+
+        <div class="field">
+            <img src="~/Content/email.png" alt="Lock" />
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { type = "email", placeholder = "Электронная почта" } })
+            @Html.ValidationMessageFor(model => model.Email, null, new { @class = "text-danger" })
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.PasswordConfirm)
-        </div>
-        <div class="editor-field">
-            @Html.PasswordFor(model => model.PasswordConfirm)
-            @Html.ValidationMessageFor(model => model.PasswordConfirm)
+        <hr />
+        <div class="field">
+            <img src="~/Content/lock.png" alt="Password" />
+            @Html.PasswordFor(model => model.Password, new { placeholder = "Пароль" })
+            @Html.ValidationMessageFor(model => model.Password, null, new { @class = "text-danger" })
         </div>
 
-        <p>
-            <input type="submit" value="Register" />
-        </p>
-    </fieldset>
+        <hr />
+
+        <div>
+            <input type="submit" value="Создать бесплатную учетную запись" class="btn" />
+        </div>
+    }
+
+    <div id="link">
+        Уже зарегистрированы?
+        @Html.ActionLink("Вход", "LogOn", "Account")
+    </div>
 }
+
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
