--- a/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Views/Account/Register.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Wunderlist/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
 }
 
 @section Content {
-    <h4 class="signup">Получите Wunderlist бесплатно</h4>
+    <h4 class="signup">Get Wunderlist free</h4>
 
     @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-register" }))
     {
@@ -15,7 +15,7 @@
         <div class="field">
             <br />
             <img src="~/Content/user.png" alt="user" />
-            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { placeholder = "Имя" } })
+            @Html.EditorFor(model => model.Name, new { htmlAttributes = new { placeholder = "Name" } })
             @Html.ValidationMessageFor(model => model.Name, null, new { @class = "text-danger" })
         </div>
 
@@ -23,27 +23,27 @@
 
         <div class="field">
             <img src="~/Content/email.png" alt="Lock" />
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { type = "email", placeholder = "Электронная почта" } })
+            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { type = "email", placeholder = "Email" } })
             @Html.ValidationMessageFor(model => model.Email, null, new { @class = "text-danger" })
         </div>
 
         <hr />
         <div class="field">
             <img src="~/Content/lock.png" alt="Password" />
-            @Html.PasswordFor(model => model.Password, new { placeholder = "Пароль" })
+            @Html.PasswordFor(model => model.Password, new { placeholder = "Password" })
             @Html.ValidationMessageFor(model => model.Password, null, new { @class = "text-danger" })
         </div>
 
         <hr />
 
         <div>
-            <input type="submit" value="Создать бесплатную учетную запись" class="btn" />
+            <input type="submit" value="Create free account" class="btn" />
         </div>
     }
 
     <div id="link">
-        Уже зарегистрированы?
-        @Html.ActionLink("Вход", "LogOn", "Account")
+        Already registered?
+        @Html.ActionLink("Sign in", "LogOn", "Account")
     </div>
 }
 
