rename DataAccess.Interfaces assembly

--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Account/LogOn.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Account/LogOn.cshtml
@@ -1,4 +1,4 @@
-﻿@model Wunderlist.ViewModels.UserLoginModel
+﻿@model Epam.Wunderlist.WebApp.ViewModels.UserLoginModel
 
 @section Content{
     @using (Html.BeginForm("LogOn", "Account", FormMethod.Post, new { @class = "form-logon" }))
