--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Account/Register.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model Wunderlist.ViewModels.UserRegisterModel
+﻿@model Epam.Wunderlist.WebApp.ViewModels.UserRegisterModel
 
 @{
     ViewBag.Title = "Регистрация";
