--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Shared/_ControlLayout.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Shared/_ControlLayout.cshtml
@@ -18,7 +18,7 @@
     <div>
         <img alt="Logo" src="~/Content/favicon1.png" id="icon" />
     </div>
-
+    @RenderBody()
     @RenderSection("Content", required: false)
 
     @RenderSection("Scripts", required: false)
