--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Account/Register.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Account/Register.cshtml
@@ -1,6 +1,11 @@
 ﻿@model Epam.Wunderlist.WebApp.ViewModels.UserRegisterModel
 
 @{
+    Layout = "~/Views/Shared/_ControlLayout.cshtml";
+}
+
+
+@{
     ViewBag.Title = "Регистрация";
 }
 
@@ -37,7 +42,7 @@
         <hr />
 
         <div>
-            <input type="submit" value="Create free account" class="btn" />
+            <input type="submit" value="Create a free account" class="btn" />
         </div>
     }
 
