--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Shared/_Layout.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     @Scripts.Render("~/bundles/jqueryval")
 </head>
 <body>
-    <aside id="lists" class="col-sm-3">
+    <aside id="lists" class="col-md-3 hidden-xs hidden-sm">
         <div id="search-toolbar">
             <a href="#">
                 <img src="~/Content/menu.png" alt="Toggle Sidebar">
@@ -20,7 +20,7 @@
             <img src="~/Content/magnify.png" alt="Search">
         </div>
         <div id="user-toolbar">Profile</div>
-        <div id="lists-scroll">Tsaks</div>
+        <div id="lists-scroll">Tasks</div>
         <div id="lists-sidebar">
             <a href="#">
                 <img src="~/Content/plus.png" alt="Search">
@@ -29,7 +29,7 @@
         </div>
     </aside>
 
-    <main class="col-sm-5" id="main">
+    <main class="col-md-9" id="main">
 
         <div id="list-toolbar">
             <h2 class="title">text</h2>
@@ -40,31 +40,43 @@
 
         <div id="tasks-scroll">
             <div id="add-task">
-                <form ng-submit="addTodo()">
-                    <img src="~/Content/plus-white.png" id="plus">
-                    <input type="text" ng-model="todoText" placeholder="Добавить задачу..." id="new-task">
-                    <img src="~/Content/calendar.png" alt="Calendar" id="calendar">
-                    <span class="star">&#9734</span>
+                <form ng-submit="addTodo()" class="icon-container">
+                    <div class="col-md-1 col-sm-2 col-xs-2">
+                        <div class="plus">
+                            <span class="star"></span>
+                            <img src="~/Content/plus-white.png" class="item-icons">
+                        </div>
+                    </div>
+                    <div class="col-md-9 col-sm-7 col-xs-7">
+                        <input type="text" ng-model="todoText" placeholder="Добавить задачу..." id="new-task">
+                    </div>
+                    <div class="col-md-2 col-sm-3 col-xs-3">
+                        <div class="test">
+                            <img src="~/Content/calendar.png" alt="Calendar" class="item-icons">
+                            <span class="star">&#9734</span>
+                        </div>
+                    </div>
+
+
                 </form>
             </div>
         </div>
 
         <br>
 
-        <ul class="unstyled">
-            <li ng-repeat="todo in todos" class="item">
-                <input type="checkbox" ng-model="todo.done">
-                <span class="done-{{todo.done}}">{{todo.text}}</span>
-                <span class="star">&#9734</span>
-            </li>
-        </ul>
+        @*<ul class="unstyled">
+                <li ng-repeat="todo in todos" class="item">
+                    <input type="checkbox" ng-model="todo.done">
+                    <span class="done-{{todo.done}}">{{todo.text}}</span>
+                    <span class="star">&#9734</span>
+                </li>
+            </ul>*@
 
         <br>
 
         <a href="#" id="show-done">ПОКАЗАТЬ ЗАВЕРШЕННЫЕ ЗАДАЧИ</a>
     </main>
 
-    <aside class="col-sm-4" id="item-info">wesdrftghjk</aside>
 
     @RenderBody()
 
