--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Account/LogOn.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Account/LogOn.cshtml
@@ -1,5 +1,10 @@
 ﻿@model Epam.Wunderlist.WebApp.ViewModels.UserLoginModel
 
+@{
+    Layout = "~/Views/Shared/_ControlLayout.cshtml";
+}
+
+
 @section Content{
     @using (Html.BeginForm("LogOn", "Account", FormMethod.Post, new { @class = "form-logon" }))
     {
@@ -26,7 +31,7 @@
         <hr />
 
         <div class="">
-            <input type="submit" value="Вход" class="btn" />
+            <input type="submit" value="Sign in" class="btn" />
 
             <div id="link">
                 @Html.ActionLink("Forgot password?", "Register", "Account")
