add basic angular

--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Shared/_Layout.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Shared/_Layout.cshtml
@@ -9,8 +9,10 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/angular")
+    @Scripts.Render("~/bundles/webApp")
 </head>
-<body>
+<body ng-app="webApp">
     <aside id="lists" class="col-md-3 hidden-xs hidden-sm">
         <div id="search-toolbar">
             <a href="#">
@@ -38,43 +40,51 @@
 
         <br>
 
-        <div id="tasks-scroll">
-            <div id="add-task">
-                <form ng-submit="addTodo()" class="icon-container">
-                    <div class="col-md-1 col-sm-2 col-xs-2">
-                        <div class="plus">
-                            <span class="star"></span>
-                            <img src="~/Content/plus-white.png" class="item-icons">
+        <div ng-controller="ToDoItemController">
+            <div id="tasks-scroll">
+                <div id="add-task">
+                    <form class="icon-container">
+                        <div class="col-md-1 col-sm-2 col-xs-2">
+                            <div class="plus">
+                                <img src="~/Content/plus-white.png" class="item-icons">
+                            </div>
                         </div>
+                        <div class="col-md-9 col-sm-7 col-xs-7 pull-left">
+                            <input type="text" placeholder="Добавить задачу..." id="new-task" ng-model="todoText" ng-keydown="$event.keyCode == 13 && addToDoItem()">
+                        </div>
+                        <div class="col-md-2 col-sm-3 col-xs-3">
+                            <div class="pull-right">
+                                <img src="~/Content/calendar.png" alt="Calendar" class="item-icons">
+                                <img src="~/Content/border-star.png" alt="Star" class="item-icons">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <br>
+            <a href="#" id="show-done">ПОКАЗАТЬ ЗАВЕРШЕННЫЕ ЗАДАЧИ</a>
+            <br>
+
+            <ul>
+                <li ng-repeat="todo in toDoItems" ng-dblClick="showDescription()" class="item">
+                    <div class="col-md-1 col-sm-2 col-xs-2">
+                        <input type="checkbox" ng-model="todo.done">
                     </div>
-                    <div class="col-md-9 col-sm-7 col-xs-7">
-                        <input type="text" ng-model="todoText" placeholder="Добавить задачу..." id="new-task">
+                    <div class="col-md-9 col-sm-7 col-xs-7 pull-left">
+                        <div class="item-icons">
+                            <span class="done-{{todo.done}}">{{todo.text}}</span>
+                        </div>
                     </div>
                     <div class="col-md-2 col-sm-3 col-xs-3">
-                        <div class="test">
-                            <img src="~/Content/calendar.png" alt="Calendar" class="item-icons">
-                            <span class="star">&#9734</span>
+                        <div class="pull-right">
+                            <img src="~/Content/border-star.png" alt="Star" class="item-icons">
                         </div>
                     </div>
-
-
-                </form>
-            </div>
-        </div>
-
-        <br>
-
-        @*<ul class="unstyled">
-                <li ng-repeat="todo in todos" class="item">
-                    <input type="checkbox" ng-model="todo.done">
-                    <span class="done-{{todo.done}}">{{todo.text}}</span>
-                    <span class="star">&#9734</span>
                 </li>
-            </ul>*@
+            </ul>
 
-        <br>
-
-        <a href="#" id="show-done">ПОКАЗАТЬ ЗАВЕРШЕННЫЕ ЗАДАЧИ</a>
+        </div>
     </main>
 
 
