--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Content/Site.css
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Content/Site.css
@@ -4,8 +4,6 @@
     font-family: Cambria, Georgia, "Times New Roman";
 }
 
-.test {
-}
 
 .plus {
     width: 2em;
@@ -40,7 +38,7 @@
     position: fixed;
     bottom: 5px;
     height: 45px;
-    /*	width: 25%;*/
+    width: 25%;
     border-top: 1px solid #DCDCDC;
     margin-left: -15px;
 }
@@ -87,13 +85,14 @@ a img {
 
 #main {
     background-image: url(main.jpg);
-    height: 60em;
+    height: 100vh;
+    overflow: auto;
 }
 
 #add-task {
     padding: 2px;
     height: 45px;
-    margin-top: 10px;
+    margin-top: 2em;
     background: #79B376;
     border-radius: 5px;
 }
@@ -103,7 +102,8 @@ a img {
     border: #79B376;
     color: #FFF;
     font-size: 1.1em;
-    padding: 10px;
+    padding: .7em;
+    width: 100%;
 }
 
 .icon-container {
@@ -117,6 +117,7 @@ a img {
 
 .item-icons {
     margin-bottom: 0.9em;
+    margin-top: .5em;
 }
 
 #calendar-icon {
@@ -129,7 +130,6 @@ a img {
 }
 
 #show-done {
-    margin-top: 30px;
     background: #79B376;
     color: #FFF;
     border-radius: 3px;
@@ -142,12 +142,29 @@ a img {
     color: grey;
 }
 
+.done-false {
+    margin: 1em 0px 0px;
+}
+
+ul {
+    padding-left: 0;
+    margin-top: 2em;
+}
+
+li {
+    margin: .5em 0;
+}
+
+input[type="checkbox"] {
+    margin: 1em 0px 0px;
+}
+
 .item {
     border-radius: 3px;
     background: #538F7D;
     list-style-type: none;
-    margin-left: -8%;
     padding-left: 5px;
+    height: 3em;
 }
 
 #item-info {
