--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
@@ -1,7 +1,102 @@
-﻿
-@{
-    ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Wunderlist</title>
+    @Styles.Render("~/Content/css")
+    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/angular")
+    @Scripts.Render("~/bundles/webApp")
+</head>
+<body ng-app="webApp">
+    <aside id="lists" class="col-md-3 hidden-xs hidden-sm">
+        <div id="search-toolbar">
+            <a href="#">
+                <img src="~/Content/menu.png" alt="Toggle Sidebar" class="img-item">
+            </a>
+            <input type="text" placeholder="Search..." ng-model="search.text" id="search" />
+            <img src="~/Content/magnify.png" alt="Search">
+        </div>
+        <div id="user-toolbar">Profile</div>
 
+        <div id="lists-scroll" ng-controller="ToDoListController">
+            <ul ng-repeat="list in toDoLists">
+                <li>{{list.Name}}</li>
+            </ul>
+        </div>
 
+        <div id="lists-sidebar">
+            <a href="#">
+                <img src="~/Content/plus.png" alt="Search">
+                <span>Create list</span>
+            </a>
+        </div>
+    </aside>
+
+    <main class="col-md-9" id="main">
+
+        <div id="list-toolbar">
+            <h2 class="title">text</h2>
+        </div>
+        <div id="action-bar"></div>
+
+        <br>
+
+        <div ng-controller="ToDoItemController">
+            <div id="tasks-scroll">
+                <div id="add-task">
+                    <form class="icon-container">
+                        <div class="col-md-1 col-sm-2 col-xs-2">
+                            <div class="plus">
+                                <img src="~/Content/plus-white.png" class="item-icons">
+                            </div>
+                        </div>
+                        <div class="col-md-9 col-sm-7 col-xs-7 pull-left">
+                            <input type="text" placeholder="Add a to-do..." id="new-task" ng-model="todoText" ng-keydown="$event.keyCode == 13 && addToDoItem()">
+                        </div>
+                        <div class="col-md-2 col-sm-3 col-xs-3">
+                            <div class="pull-right">
+                                <img src="~/Content/calendar.png" alt="Calendar" class="item-icons">
+                                <img src="~/Content/border-star.png" alt="Star" class="item-icons">
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+
+            <br>
+            <a href="#" id="show-done">SHOW COMPLETED TO DOS</a>
+            <br>
+
+            <ul>
+                <li ng-repeat="todo in toDoItems" ng-dblClick="showDescription()" class="item">
+                    <div class="col-md-1 col-sm-2 col-xs-2">
+                        <input type="checkbox" ng-model="todo.done">
+                    </div>
+                    <div class="col-md-9 col-sm-7 col-xs-7 pull-left">
+                        <div class="item-icons">
+                            <span class="done-{{todo.done}}">{{todo.text}}</span>
+                        </div>
+                    </div>
+                    <div class="col-md-2 col-sm-3 col-xs-3">
+                        <div class="pull-right">
+                            <img src="~/Content/border-star.png" alt="Star" class="item-icons">
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </main>
+
+    <aside class="col-md-3" id="item-info">
+        <div>trsssg</div>
+    </aside>
+
+    @Scripts.Render("~/bundles/jquery")
+    @*<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>*@
+</body>
+</html>
