--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Content/Site.css
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Content/Site.css
@@ -172,7 +172,12 @@ input[type="checkbox"] {
 }
 
 #item-info {
-    display: block;
+    display: none;
+}
+
+.list-item {
+    padding: 0;
+    margin: 0;
 }
 
 #icon {
