--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
@@ -14,7 +14,8 @@
     @Scripts.Render("~/bundles/angular")
 
     <script>
-        userId = @(((ClaimsIdentity)User.Identity).Claims.FirstOrDefault(x=>x.Type==ClaimTypes.NameIdentifier).Value);
+        userId = @(((ClaimsIdentity)User.Identity).Claims
+            .FirstOrDefault(x => x.Type == ClaimTypes.NameIdentifier).Value);
     </script>
 
     @Scripts.Render("~/bundles/webApp")
@@ -23,97 +24,99 @@
 </head>
 
 <body ng-app="webApp">
+    <div ng-controller="ToDoListController">
+        <aside id="lists" class="col-md-3 hidden-xs hidden-sm">
+            <div id="search-toolbar">
+                <a href="#">
+                    <img src="~/Content/menu.png" alt="Toggle Sidebar" class="img-item">
+                </a>
+                <input type="text" placeholder="Search..." ng-model="search.text" id="search" />
+                <img src="~/Content/magnify.png" alt="Search">
+            </div>
+            <div id="user-toolbar">Profile</div>
 
-    <aside id="lists" class="col-md-3 hidden-xs hidden-sm">
-        <div id="search-toolbar">
-            <a href="#">
-                <img src="~/Content/menu.png" alt="Toggle Sidebar" class="img-item">
-            </a>
-            <input type="text" placeholder="Search..." ng-model="search.text" id="search" />
-            <img src="~/Content/magnify.png" alt="Search">
-        </div>
-        <div id="user-toolbar">Profile</div>
+            <div id="lists-scroll">
+                <ul>
+                    <li ng-repeat="list in toDoLists" class="list-item" ng-click="showItems(list.Id)">
+                        <div class="col-md-1 col-sm-2 col-xs-2 pull-left">
+                            <img src="~/Content/list.png" alt="List-icon">
+                        </div>
 
-        <div id="lists-scroll" ng-controller="ToDoListController">
-            <ul>
-                <li ng-repeat="list in toDoLists" class="list-item">
-                    <div class="col-md-1 col-sm-2 col-xs-2 pull-left">
-                        <img src="~/Content/list.png" alt="List-icon">
-                    </div>
+                        <div class="col-md-9 col-sm-7 col-xs-7 pull-left">
+                            <span>{{list.Name}}</span>
+                        </div>
 
-                    <div class="col-md-9 col-sm-7 col-xs-7 pull-left">
-                        <span>{{list.Name}}</span>
-                    </div>
+                        <div class="col-md-2 col-sm-3 col-xs-3 pull-right">
+                            @*<img src="~/Content/list.png" alt="List-icon">*@
+                        </div>
+                    </li>
+                </ul>
+            </div>
 
-                    <div class="col-md-2 col-sm-3 col-xs-3 pull-right">
-                        @*<img src="~/Content/list.png" alt="List-icon">*@
-                    </div>
-                </li>
-            </ul>
-        </div>
+            <div id="lists-sidebar">
+                <a href="#">
+                    <img src="~/Content/plus.png" alt="Search">
+                    <span>Create list</span>
+                </a>
+            </div>
+        </aside>
 
-        <div id="lists-sidebar">
-            <a href="#">
-                <img src="~/Content/plus.png" alt="Search">
-                <span>Create list</span>
-            </a>
-        </div>
-    </aside>
+        <main class="col-md-9" id="main">
 
-    <main class="col-md-9" id="main">
+            <div id="list-toolbar">
+                <h2 class="title">text</h2>
+            </div>
+            <div id="action-bar"></div>
 
-        <div id="list-toolbar">
-            <h2 class="title">text</h2>
-        </div>
-        <div id="action-bar"></div>
+            <br>
 
-        <br>
+            <div ng-controller="ToDoItemController">
+                <div id="tasks-scroll">
+                    <div id="add-task">
+                        <form class="icon-container">
+                            @*<div class="col-md-1 col-sm-2 col-xs-2">
 
-        <div ng-controller="ToDoItemController">
-            <div id="tasks-scroll">
-                <div id="add-task">
-                    <form class="icon-container">
-                        <div class="col-md-1 col-sm-2 col-xs-2">
-                            <div class="plus">
+                                </div>*@
+                            <div class="col-md-10 col-sm-9 col-xs-8 pull-left">
+                                @*<div class="plus">*@
                                 <img src="~/Content/plus-white.png" class="item-icons">
+                                @*</div>*@
+                                <input type="text" placeholder="Add a to-do..." id="new-task" ng-model="todoText" ng-keydown="$event.keyCode == 13 && addToDoItem()">
                             </div>
+                            <div class="col-md-2 col-sm-3 col-xs-4">
+                                <div class="pull-right">
+                                    <img src="~/Content/calendar.png" alt="Calendar" class="item-icons">
+                                    <img src="~/Content/border-star.png" alt="Star" class="item-icons">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <br>
+                <a href="#" id="show-done">SHOW COMPLETED TO DOS</a>
+                <br>
+
+                <ul>
+                    <li ng-repeat="todo in toDoItems" ng-dblClick="showDescription(todo)" class="item">
+                        <div class="col-md-1 col-sm-2 col-xs-2">
+                            <input type="checkbox" ng-model="todo.done">
                         </div>
                         <div class="col-md-9 col-sm-7 col-xs-7 pull-left">
-                            <input type="text" placeholder="Add a to-do..." id="new-task" ng-model="todoText" ng-keydown="$event.keyCode == 13 && addToDoItem()">
+                            <div class="item-icons">
+                                <span class="done-{{todo.done}}">{{todo.Text}}</span>
+                            </div>
                         </div>
                         <div class="col-md-2 col-sm-3 col-xs-3">
                             <div class="pull-right">
-                                <img src="~/Content/calendar.png" alt="Calendar" class="item-icons">
                                 <img src="~/Content/border-star.png" alt="Star" class="item-icons">
                             </div>
                         </div>
-                    </form>
-                </div>
+                    </li>
+                </ul>
             </div>
-
-            <br>
-            <a href="#" id="show-done">SHOW COMPLETED TO DOS</a>
-            <br>
-
-            <ul>
-                <li ng-repeat="todo in toDoItems" ng-dblClick="showDescription()" class="item">
-                    <div class="col-md-1 col-sm-2 col-xs-2">
-                        <input type="checkbox" ng-model="todo.done">
-                    </div>
-                    <div class="col-md-9 col-sm-7 col-xs-7 pull-left">
-                        <div class="item-icons">
-                            <span class="done-{{todo.done}}">{{todo.Text}}</span>
-                        </div>
-                    </div>
-                    <div class="col-md-2 col-sm-3 col-xs-3">
-                        <div class="pull-right">
-                            <img src="~/Content/border-star.png" alt="Star" class="item-icons">
-                        </div>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </main>
+        </main>
+    </div>
 
     <aside class="col-md-3" id="item-info" ng-controller="DescriptionController">
         <form>
@@ -123,7 +126,7 @@
                 </div>
                 <div class="col-md-9 col-sm-7 col-xs-7 pull-left">
                     <div class="item-icons">
-                        <span>{{todo.text}}</span>
+                        <span>{{getTodo()}}</span>
                     </div>
                 </div>
                 <div class="col-md-1 col-sm-3 col-xs-3">
