--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
@@ -142,6 +142,17 @@
         </form>
     </aside>
 
+
+    <div ng-controller="UserController">
+        <div ng-repeat="user in users">
+            {{user.Email}}
+        </div>
+
+        <div>
+            {{user.Name}}
+        </div>
+    </div>
+
     @Scripts.Render("~/bundles/jquery")
     @*<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>*@
 </body>
