--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/WebApp/Index.cshtml
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Wunderlist</title>
 
-    @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
@@ -19,8 +18,7 @@
     </script>
 
     @Scripts.Render("~/bundles/webApp")
-
-
+    @Styles.Render("~/Content/css")
 </head>
 
 <body ng-app="webApp">
@@ -38,11 +36,8 @@
             <div id="lists-scroll">
                 <ul>
                     <li ng-repeat="list in toDoLists" class="list-item" ng-click="showItems(list.Id)">
-                        <div class="col-md-1 col-sm-2 col-xs-2 pull-left">
+                        <div class="col-md-10 col-sm-9 col-xs-9 pull-left">
                             <img src="~/Content/list.png" alt="List-icon">
-                        </div>
-
-                        <div class="col-md-9 col-sm-7 col-xs-7 pull-left">
                             <span>{{list.Name}}</span>
                         </div>
 
@@ -74,13 +69,8 @@
                 <div id="tasks-scroll">
                     <div id="add-task">
                         <form class="icon-container">
-                            @*<div class="col-md-1 col-sm-2 col-xs-2">
-
-                                </div>*@
                             <div class="col-md-10 col-sm-9 col-xs-8 pull-left">
-                                @*<div class="plus">*@
                                 <img src="~/Content/plus-white.png" class="item-icons">
-                                @*</div>*@
                                 <input type="text" placeholder="Add a to-do..." id="new-task" ng-model="todoText" ng-keydown="$event.keyCode == 13 && addToDoItem()">
                             </div>
                             <div class="col-md-2 col-sm-3 col-xs-4">
@@ -94,26 +84,41 @@
                 </div>
 
                 <br>
-                <a href="#" id="show-done">SHOW COMPLETED TO DOS</a>
-                <br>
 
                 <ul>
-                    <li ng-repeat="todo in toDoItems" ng-dblClick="showDescription(todo)" class="item">
-                        <div class="col-md-1 col-sm-2 col-xs-2">
-                            <input type="checkbox" ng-model="todo.done">
+                    <li ng-repeat="todo in toDoItems | filter: !todo.IsCompleted" ng-dblClick="showDescription(todo)" class="item">
+                        <div class="col-md-10 col-sm-9 col-xs-9 pull-left">
+                            <input type="checkbox" ng-model="todo.IsCompleted"">
+                            <span class="done-{{todo.IsCompleted}} item-text">{{todo.Text}}</span>
                         </div>
-                        <div class="col-md-9 col-sm-7 col-xs-7 pull-left">
-                            <div class="item-icons">
-                                <span class="done-{{todo.done}}">{{todo.Text}}</span>
-                            </div>
-                        </div>
-                        <div class="col-md-2 col-sm-3 col-xs-3">
+
+                        <div class="col-md-2 col-sm-3 col-xs-3 pull-right">
                             <div class="pull-right">
-                                <img src="~/Content/border-star.png" alt="Star" class="item-icons">
+                                <img src="~/Content/star-border-black.png" alt="Star" class="item-icons">
                             </div>
                         </div>
                     </li>
                 </ul>
+                
+                <br>
+                <uib-accordion close-others="true">
+                    <uib-accordion-group heading="SHOW COMPLETED TO DOS" id="show-done">
+                        <ul>
+                            <li ng-repeat="todo in toDoItems | filter: todo.IsCompleted" ng-dblClick="showDescription(todo)" class="item-done">
+                                <div class="col-md-10 col-sm-9 col-xs-9 pull-left">
+                                    <img src="~/Content/check.png" alt="Check" class="item-icons">
+                                    <span class="done-{{todo.IsCompleted}} item-text">{{todo.Text}}</span>
+                                </div>
+
+                                <div class="col-md-2 col-sm-3 col-xs-3 pull-right">
+                                    <div class="pull-right">
+                                        <img src="~/Content/star-border-black.png" alt="Star" class="item-icons">
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </uib-accordion-group>
+                </uib-accordion>
             </div>
         </main>
     </div>
@@ -153,7 +158,8 @@
         </div>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
+    @*@Scripts.Render("~/bundles/jquery")*@
+
     @*<script src="@Url.Content("~/Scripts/jquery.unobtrusive-ajax.js")" type="text/javascript"></script>*@
 </body>
 </html>
