--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Content/Site.css
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Content/Site.css
@@ -14,6 +14,7 @@
     transition: width 100ms ease;
     background: #f7f7f7;
     height: 100vh;
+    padding: 0;
 }
 
 #search-toolbar {
@@ -61,6 +62,7 @@
     display: block;
 }
 
+
 a:hover {
     text-decoration: none;
 }
@@ -106,12 +108,27 @@ a img {
     width: calc(100% - 28px);
 }
 
+.text-update {
+    font-size: 1.1em;
+    border: none;
+    padding-left: .5em;
+    width: 80%;
+    vertical-align: 3px;
+}
+
 .icon-container {
     position: relative;
 }
 
 .img-item {
     padding: .5em;
+}
+
+.update-elem {
+    border-bottom: 1px solid #DCDCDC;
+    height: 45px;
+    width: calc(100% + 28px);
+    margin-left: -14px;
 }
 
 #plus {
@@ -158,7 +175,7 @@ li {
 }
 
 input[type="checkbox"] {
-    margin: 1em 0px 0px;
+    margin: 1em .5em 0px;
 }
 
 .item {
@@ -193,10 +210,18 @@ input[type="checkbox"] {
     display: none;
 }
 
+.list-item:first-child {
+    border-top: 1px #DCDCDC solid;
+}
+
 .list-item {
     list-style-type: none;
-    height: 2em;
+    height: 3em;
     margin-left: -10px;
+    border-bottom: 1px #DCDCDC solid;
+    padding: .5em;
+    width: calc(100% + 28px);
+    margin-left: -14px;
 }
 
 #icon {
