add modal window create list

--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Content/Site.css
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Content/Site.css
@@ -39,9 +39,10 @@
     position: fixed;
     bottom: 5px;
     height: 45px;
-    width: 25%;
+    width: 28%;
     border-top: 1px solid #DCDCDC;
-    margin-left: -15px;
+    margin-left: -3%;
+    padding-top: 1%;
 }
 
 #list-toolbar {
@@ -69,6 +70,10 @@ a:hover {
 
 a img {
     padding: 6px;
+}
+
+h4 {
+    text-align: center;
 }
 
 #search {
@@ -121,7 +126,7 @@ a img {
 }
 
 .img-item {
-    padding: .5em;
+    padding: 0 0 0 1.4em;
 }
 
 .update-elem {
@@ -253,6 +258,12 @@ input[type="checkbox"] {
     margin: 30px auto;
 }
 
+#name-list {
+    height: 3em;
+    width: 100%;
+    border: none;
+}
+
 legend {
     font-size: 1.2em;
     font-weight: bold;
@@ -266,7 +277,7 @@ input[type="text"]::-moz-placeholder {
     color: #ccc;
 }
 
-.btn {
+.btn-signin {
     display: block;
     margin: 0 auto;
     border-radius: 5px;
@@ -277,6 +288,11 @@ input[type="text"]::-moz-placeholder {
     border: 0 none;
     align-content: center;
     margin-bottom: 10px;
+}
+
+.modal-btn {
+    background: #79B376;
+    color: #FFF;
 }
 
 #link {
