--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Account/LogOn.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Account/LogOn.cshtml
@@ -31,7 +31,7 @@
         <hr />
 
         <div class="">
-            <input type="submit" value="Sign in" class="btn" />
+            <input type="submit" value="Sign in" class="btn-signin" />
 
             <div id="link">
                 @Html.ActionLink("Forgot password?", "Register", "Account")
