--- a/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Account/Register.cshtml
+++ b/Epam.Wunderlist.Kosinov.Klimchuk/Epam.Wunderlist.WebApp/Views/Account/Register.cshtml
@@ -42,7 +42,7 @@
         <hr />
 
         <div>
-            <input type="submit" value="Create a free account" class="btn" />
+            <input type="submit" value="Create a free account" class="btn-signin" />
         </div>
     }
 
